# walletd-v1.1

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  walletd-v1.3.8-fuzzing-source.patch
coins/aptos/: Cargo.toml  README.md
coins/aptos/src/: lib.rs
coins/arbitrum/: Cargo.toml  README.md
coins/arbitrum/src/: config.rs  lib.rs  wallet.rs
coins/avalanche/: Cargo.toml
coins/avalanche/src/: config.rs  error.rs  lib.rs  rpc.rs  transaction.rs  wallet.rs
coins/base/: Cargo.toml
coins/base/src/: transaction.rs  wallet.rs
coins/bitcoin/: Cargo.toml
coins/bitcoin/src/: bitcoin_wallet.rs  lib.rs
coins/bitcoin/tests/: edge_cases.rs
coins/cardano/: Cargo.toml
coins/cardano/src/: address.rs  config.rs  error.rs  lib.rs  wallet.rs
coins/cosmos/: Cargo.toml
coins/cosmos/src/: lib.rs
coins/ethereum/: Cargo.toml
coins/ethereum/examples/: README.md
coins/ethereum/src/: error.rs  ethclient.rs  ethereum_amount.rs  ethereum_wallet.rs  lib.rs  prelude.rs  traits_impl.rs
coins/ethereum/tests/: edge_cases.rs  integration.rs  integration_tests.rs
coins/hedera/: Cargo.toml
coins/hedera/src/: client.rs  wallet.rs
coins/icp/: Cargo.toml
coins/icp/src/crosschain/: ethereum_adapter.rs
coins/icp/src/wallet/: mod.rs
coins/icp/tests/: canister_advanced_test.rs
coins/monero/src/: address.rs  monero_amount.rs  monero_wallet.rs
coins/near/: Cargo.toml
coins/near/src/: lib.rs
coins/polkadot/: Cargo.toml
coins/polkadot/src/: lib.rs
coins/polygon/: Cargo.toml
coins/polygon/src/: config.rs  error.rs  lib.rs  rpc.rs  transaction.rs  wallet.rs
coins/solana/: Cargo.toml
coins/solana/examples/: accounts.rs  get_airdrop.rs  send_sol.rs
coins/solana/src/: solana_account.rs  solana_client.rs
coins/sui/: Cargo.toml  README.md
coins/sui/src/: lib.rs
coins/ton/: Cargo.toml  README.md
coins/ton/src/: lib.rs
coins/tron/: Cargo.toml
coins/tron/src/: lib.rs
coins/walletd_erc20/: Cargo.toml
coins/walletd_erc20/src/: adapter.rs  lib.rs  registry.rs  usdc.rs
crates/walletd/: Cargo.toml  README.md
crates/walletd-core/: Cargo.toml
crates/walletd-core/src/: lib.rs
crates/walletd-error/: Cargo.toml
crates/walletd-error/src/: lib.rs
crates/walletd-provider/: Cargo.toml  README.md
crates/walletd-provider/src/: lib.rs
crates/walletd-resilience/: Cargo.toml
crates/walletd-resilience/src/: backoff.rs  circuit_breaker.rs  health.rs  lib.rs  retry_policy.rs  timeout.rs
crates/walletd-testing/: Cargo.toml
crates/walletd-testing/src/: lib.rs
crates/walletd-traits/: Cargo.toml
crates/walletd-traits/src/: lib.rs
crates/walletd-wasm/: Cargo.toml  README.md  walletd-wasm.d.ts
crates/walletd-wasm/examples/: index.html
crates/walletd-wasm/src/: lib.rs
crates/walletd/benches/: wallet_benchmarks.rs
crates/walletd/examples/: icp_usage.rs.disabled  multi_chain.rs  simple_wallet.rs
crates/walletd/src/: lib.rs
crates/walletd_icp_api/src/: lib.rs
docs/: API.md  COVERAGE.md  PUBLISHING.md  QUALITY_IMPROVEMENT_PLAN.md  SECURITY.md  SECURITY_AUDIT_PREP.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_eth_amount.rs  fuzz_hd_derivation.rs  fuzz_mnemonic.rs
key_manager/hd_key/: Cargo.toml
key_manager/hd_key/src/: hd_key.rs
mnemonics/monero/: Cargo.toml
scripts/: build-wasm.sh  coverage.sh  publish-crates.sh  publish.sh  security-audit.sh
walletd-cli/: Cargo.toml  README.md
walletd-cli/src/: config.rs  main.rs  types.rs
walletd-cli/src/wallet_integration/: aptos_wallet.rs  bitcoin_real.rs  bitcoin_wallet.rs  cardano_wallet.rs  cosmos_wallet.rs  ethereum_real.rs  ethereum_wallet.rs  evm_wallet.rs  hd_derivation.rs  hedera_real.rs  hedera_wallet.rs  icp_real.rs  icp_wallet.rs  mod.rs  monero_real.rs  monero_wallet.rs  near_wallet.rs  polkadot_wallet.rs  solana_real.rs  solana_wallet.rs  sui_wallet.rs  ton_wallet.rs  tron_wallet.rs
walletd-prasaga-avio/: Cargo.toml
walletd-prasaga-avio/examples/: object_ops.rs  transfer.rs
walletd-prasaga-avio/src/keys/: keypair.rs
walletd-prasaga-avio/src/transaction/: builder.rs
walletd_icp_cli/: Cargo.toml
walletd_icp_cli/src/: config.rs  eth_functions.rs  eth_send_real.rs  wallet_integration.rs
walletd_icp_cli/src/swaps/: dex.rs
walletd_icp_cli/src/wallet_integration/: ethereum_real.rs
