[workspace]
exclude = ["fuzz"]
members = [
    "walletd_icp_cli",
    "coins/bitcoin",
    "coins/monero",
    #"coins/solana",
    "coins/ethereum",
    "coins/hedera",
    "coins/icp",
    "coins/walletd_erc20",
    "coins/sui",
    "coins/arbitrum",
    "coins/aptos",
    "coins/ton",
    "key_manager/hd_key",
    "mnemonics/core",
    "mnemonics/monero",
    "rates",
    "crates/walletd-core",
    "crates/walletd_icp_api",
    "crates/walletd-traits",
    "crates/walletd-error",
    "crates/walletd-provider",
    "crates/walletd",
    "crates/walletd-wasm",
    "crates/walletd-testing",
    "crates/walletd-resilience",
    "coins/base",
    "coins/polygon",
    "coins/avalanche",
    "coins/cardano",
    "coins/cosmos",
    "coins/tron",
    "coins/polkadot",
    "coins/near",
    "walletd-prasaga-avio",
]
resolver = "2"

[workspace.dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Core workspace crates
walletd-traits = { path = "crates/walletd-traits", version = "0.1.0" }
walletd-error = { path = "crates/walletd-error", version = "0.1.0" }
walletd-provider = { path = "crates/walletd-provider", version = "0.1.0" }
walletd_hd_key = { path = "key_manager/hd_key", version = "0.2.0" }

# ICP ecosystem
ic-agent = "0.44"
ic-utils = "0.44"
ic-cdk = "0.13.6"
candid = "0.10.10"
ic-types = "0.7.0"
ic-ledger-types = "0.10.0"

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde-aux = "4.5.0"

# CLI
clap = { version = "4.5.20", features = ["derive"] }

# Cryptography
ed25519-dalek = "2.1.1"
curve25519-dalek = "4.1.3"
secp256k1 = "0.27"
sha2 = "0.10.8"
hmac = "0.12.1"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
zeroize = { version = "1.8", features = ["derive"] }

# Key management
bip32 = "0.5.2"

# Utilities
rand = "0.8.5"
hex = "0.4.3"
base58 = "0.2"
base64 = "0.22.1"
ripemd = "0.1"

# Async
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.83"

# HTTP
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0.92"
thiserror = "1.0.66"

# Logging
log = "0.4.22"
tracing = "0.1"

# Monero
monero = "0.21.0"

# External (deprecated - use workspace crates instead)
walletd = { git = "https://github.com/walletd/walletd", branch = "main" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2
