[package]
name = "walletd-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
walletd_bitcoin = { path = "../coins/bitcoin" }
walletd_ethereum = { path = "../coins/ethereum" }
walletd_hd_key = { path = "../key_manager/hd_key" }
bip39 = "2.0"
hex = "0.4"

[[bin]]
name = "fuzz_mnemonic"
path = "fuzz_targets/fuzz_mnemonic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_hd_derivation"
path = "fuzz_targets/fuzz_hd_derivation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_eth_amount"
path = "fuzz_targets/fuzz_eth_amount.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
