[package]
name = "walletd-cli"
version = "0.2.0"
edition = "2021"
description = "WalletD Multi-Chain CLI - Full SDK Integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd/walletd"

[[bin]]
name = "walletd"
path = "src/main.rs"

[[bin]]
name = "walletd-icp-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
bitcoin = { version = "0.31", features = ["rand"] }
ethers = "2.0"
bs58 = "0.5"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
bip39 = "2.0"
tiny-bip39 = "1.0"
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.8"
