[package]
name = "walletd_arbitrum"
version = "0.1.0"
edition = "2021"
description = "Arbitrum L2 blockchain support for WalletD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd/walletd"
keywords = ["wallet", "cryptocurrency", "arbitrum", "ethereum", "layer2"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Core dependencies - Alloy for EVM compatibility
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"

# Cryptography
secp256k1 = { version = "0.27", features = ["recovery"] }
sha3 = "0.10"

# HD wallet support
bip39 = "2.0"
bip32 = "0.5"

# HTTP client for RPC
reqwest = { version = "0.11", features = ["json"] }

# Utilities
rand = "0.8"
log = "0.4"

# Unified traits
walletd-traits = { path = "../../crates/walletd-traits" }

[dev-dependencies]
tokio-test = "0.4"
