[package]
name = "walletd_cardano"
version = "0.1.0"
edition = "2021"
description = "Cardano (ADA) wallet support for WalletD"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
async-trait = "0.1"

# Cryptography - Cardano uses Ed25519
ed25519-dalek = "2.1"
sha2 = "0.10"
blake2 = "0.10"

# HD wallet support
bip39 = "2.0"
bip32 = "0.5"
hmac = "0.12"
pbkdf2 = "0.12"

# Address encoding
bech32 = "0.11"

# HTTP client for API
reqwest = { version = "0.11", features = ["json"] }

# Utilities
rand = "0.8"
log = "0.4"

# Unified traits
walletd-traits = { path = "../../crates/walletd-traits" }

[dev-dependencies]
tokio-test = "0.4"
