[package]
name = "walletd_solana"
version = "0.2.0"
edition = "2021"

[dependencies]
solana-sdk = "3.0"
solana-client = "3.0"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-commitment-config = "3.0"
thiserror = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
solana-commitment-config = "3.0"
