[package]
name = "walletd_sui"
version = "0.1.0"
edition = "2021"
description = "SUI blockchain support for WalletD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd/walletd"
keywords = ["wallet", "cryptocurrency", "sui", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Core traits
walletd-traits = { path = "../../crates/walletd-traits", version = "0.1" }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
blake2 = "0.10"
rand = "0.8"

# HD key derivation
tiny-bip39 = "1.0"
slip10_ed25519 = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
bcs = "0.1"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["sync"], optional = true }

# Error handling
thiserror = "1.0"

# HTTP client (optional, for RPC calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }

[features]
default = []
async-runtime = ["tokio"]
rpc = ["reqwest", "async-runtime"]
