[package]
name = "walletd_ton"
version = "0.1.0"
edition = "2021"
description = "TON (The Open Network) blockchain support for WalletD"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd/walletd"
keywords = ["wallet", "cryptocurrency", "ton", "telegram", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Core traits
walletd-traits = { path = "../../crates/walletd-traits", version = "0.1" }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
crc = "3.0"

# HD key derivation (BIP-39 wordlist)
tiny-bip39 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"

# Async
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Security
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
proptest = "1.4"

[features]
default = []
