[package]
name = "walletd-testing"
version = "0.1.0"
edition = "2021"
description = "Testing infrastructure for WalletD - fuzzing, property tests, security checks"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# Core crates for testing
walletd-traits = { path = "../walletd-traits" }

# Property-based testing
proptest = "1.4"
arbitrary = { version = "1.3", features = ["derive"] }

# Test utilities
rand = "0.8"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
