[package]
name = "walletd-traits"
version = "0.1.0"
edition = "2021"
description = "Unified traits for WalletD multi-chain wallet SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd/walletd"
keywords = ["wallet", "cryptocurrency", "blockchain", "traits"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
